# dinfo

./: .gitignore  Cargo.toml  build_run.sh  dump.out  test  test_ffi
samples/: enum.S  hello  hello.c  sample.S  test  test.S
samples/hello.dSYM/Contents/Resources/DWARF/: hello
samples/hello.dSYM/Contents/Resources/Relocations/aarch64/: hello.yml
src/: lib.rs  main.rs  rust_interface.h  test.c  test.h  test_ffi.c  test_ffi.rs
test.dSYM/Contents/Resources/Relocations/aarch64/: test.yml
