[package]
name = "dinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gimli = "0.28.1"
object = "0.32.1"
memmap2 = "0.9.0"
fallible-iterator = "0.3.0"
regex = "1.10.2"
typed-arena = "1.2.0"
num_cpus = "1.16.0"
crossbeam = "0.8.2"
getopts = "0.2.21"
once_cell = "1.19.0"
indexmap = "2.1.0"

[lib]
name = "dinfo"
crate-type = ["cdylib"]
